syntax = "proto3";

option csharp_namespace = "Campaigns.Api.Web";

package camp;

service ChannelGrpcService {
  rpc GetChannelForToken(ChannelRequest) returns (ChannelResponse);
  rpc GetCampaignForChannel(CampaignRequest) returns (CampaignResponse);
  rpc GetCampaignsForUser(CampaignUserRequest) returns (CampaignUserResponse);
}

message CampaignRequest {
  int32 channelId = 1;
}

message CampaignResponse {
  bool isSuccess = 1;
  int32 campaignId = 2;
}

message ChannelRequest {
  string token = 1;
  int32 userId = 2;
}

message CampaignUserRequest {
  int64 userId = 1;
}

message CampaignUserResponse {
  int64 userId = 1;
  bool isSuccess = 2;
  repeated int32 campaignId = 3;
}

message ChannelProperty {
  string name = 1;
  string value = 2;
}

message ChannelResponse {
  bool isSuccess = 1;
  repeated ChannelProperty prop = 2;
}
